[package]
name = "chief"
version = "1.0.0"
authors = ["Montasir Mirghani <contact@montasir.me>"]
edition = "2021"
description = "A Development Tools"
license = "MIT OR Apache-2.0"
homepage = "https://github.com/dr-montasir/chief"
repository = "https://github.com/dr-montasir/chief"
readme = "README.md"
keywords = ["run", "dev", "test", "log", "env"]
categories = ["development-tools"]

[dependencies]
clap = { version = "4.5.20", features = ["derive"] }
dotenv = "0.15.0"
log = "0.4.22"
simplelog = "0.12.2"

[lib]
name = "chief"
path = "src/lib.rs"
